--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,5 @@
-<form>
+<form action="/student" method="post">
+  Student Name: <input type="text" name="student[name]">
+  Student Grade: <input type="text" name="student[grade]">
+  <input type="submit">
 </form>
