--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<form action="/student" method="post">
+<form action="/checkout" method="post">
   Student Name: <input type="text" name="student[name]">
   Student Grade: <input type="text" name="student[grade]">
   <input type="submit">
