--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <form action="/checkout" method="post">
-  Student Name: <input type="text" name="student[name]">
+  Purchase Item: <input type="text" name="student[name]">
   Student Grade: <input type="text" name="student[grade]">
   <input type="submit">
 </form>
