--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,4 @@
 <form action="/checkout" method="post">
-  Purchase Item: <input type="text" name="student[name]">
-  Student Grade: <input type="text" name="student[grade]">
+  Purchase Item: <input type="text" name="purchase_item">
   <input type="submit">
 </form>
