automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <form action="/checkout" method="post">
-  Purchase Item: <input type="text" name="purchase_item">
+  Item: <input type="text" name="item">
   <input type="submit">
 </form>
