--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <form action="/checkout" method="post">
   Item: <input type="text" name="item">
-  <input type="submit">submit
+  <input type="submit">submit</index>
 </form>
